tests/test-files/parse-for.txt
================================================================================
100 Malformed for expression
================================================================================

(package test-parser)

(define f (for))

--------------------------------------------------------------------------------

error: Malformed for expression
  --> test:3:14
   |
 3 |  (define f (for))
   |                ^ expected pattern

================================================================================
101 Malformed for expression
================================================================================

(package test-parser)

(define f (for x))

--------------------------------------------------------------------------------

error: Malformed for expression
  --> test:3:16
   |
 3 |  (define f (for x))
   |                  ^ expected in

================================================================================
102 Malformed for expression
================================================================================

(package test-parser)

(define f (for x y))

--------------------------------------------------------------------------------

error: Malformed for expression
  --> test:3:17
   |
 3 |  (define f (for x y))
   |                   ^ expected in

================================================================================
103 Malformed for expression
================================================================================

(package test-parser)

(define f (for x in iter))

--------------------------------------------------------------------------------

error: Malformed for expression
  --> test:3:24
   |
 3 |  (define f (for x in iter))
   |                          ^ expected body

================================================================================
104 Malformed for expression
================================================================================

(package test-parser)

(define f (for :label x in iter))

--------------------------------------------------------------------------------

error: Malformed for expression
  --> test:3:31
   |
 3 |  (define f (for :label x in iter))
   |                                 ^ expected body
